# ticket-agent-form-ui

./: .dockerignore  .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
src/agent/: domain.py  graph.py  model.py  tools.py  webapp.py
src/agent/static/: index.html
tests/: test_tools.py
