[project]
name = "underwriting-pipeline"
version = "0.0.1"
description = "Multi-node LangGraph underwriting pipeline with a coupled single-file form UI, deployable on LangSmith."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=0.3",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "starlette>=0.37",
    "python-dotenv>=1.0.1",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
# Ship the static UI so webapp.py can serve it from the built/deployed package.
"agent" = ["py.typed", "static/*"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.30",
    # Pin the local dev server (a langgraph-cli[inmem] transitive) to a supported line.
    # Older langgraph-api (<=0.7.x) is EOL and crashes on boot against current Starlette
    # (references the removed `Router.on_startup`), so keep the floor on the current major.
    "langgraph-api>=0.11.0",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "ruff>=0.8.2",
]
